--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",    
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
+    "@mui/system": "^5.15.14",
+    "@mui/utils": "^5.15.14",
+    "axios": "^1.6.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
