--- a/package.json
+++ b/package.json
@@ -5,23 +5,21 @@
   "homepage": "https://pokejalasoft.github.io/PokeJalasoftProject/",
   "type": "module",
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d dist",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",    
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
     "@mui/utils": "^5.15.14",
-    "axios": "^1.6.8"
+    "@mui/x-data-grid": "^7.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
