--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
     "@mui/utils": "^5.15.14",
-    "@mui/x-data-grid": "^7.1.0"
+    "@mui/x-data-grid": "^7.1.0",
+    "axios": "^1.6.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
